--- a/Aero.WebApi/Aero.WebApi.csproj
+++ b/Aero.WebApi/Aero.WebApi.csproj
@@ -18,4 +18,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Datahub.Application\Datahub.Application.csproj" />
+    </ItemGroup>
+
 </Project>
