--- a/Aero.Worker/Aero.Worker.csproj
+++ b/Aero.Worker/Aero.Worker.csproj
@@ -9,4 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Datahub.Application\Datahub.Application.csproj" />
+  </ItemGroup>
 </Project>
