--- a/Aero.WebApi/Aero.WebApi.csproj
+++ b/Aero.WebApi/Aero.WebApi.csproj
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Datahub.Application\Datahub.Application.csproj" />
+      <ProjectReference Include="..\Aero.Application\Aero.Application.csproj" />
     </ItemGroup>
 
 </Project>
