--- a/Aero.Worker/Aero.Worker.csproj
+++ b/Aero.Worker/Aero.Worker.csproj
@@ -12,5 +12,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Aero.Application\Aero.Application.csproj" />
+    <ProjectReference Include="..\Aero.Base\Aero.Base.csproj" />
   </ItemGroup>
 </Project>
