--- a/Aero.Worker/appsettings.json
+++ b/Aero.Worker/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "MdhConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MDH"
   }
 }
