--- a/Aero.WebApi/appsettings.json
+++ b/Aero.WebApi/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MdhConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MDH"
-  }
+  "AllowedHosts": "*"
 }
