--- a/Aero.WebApi/Aero.WebApi.csproj
+++ b/Aero.WebApi/Aero.WebApi.csproj
@@ -8,30 +8,44 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
-        <PackageReference Include="Scalar.AspNetCore" Version="1.2.72" />
-        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
-        <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="10.0.0" />
-        <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
+        <PackageReference Include="Scalar.AspNetCore" Version="1.2.72"/>
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="10.0.0"/>
+        <PackageReference Include="Serilog.Sinks.File" Version="6.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
-      <Content Include="..\Configuration\apis.json">
-        <Link>apis.json</Link>
-      </Content>
-      <Content Include="..\Configuration\serilog.json">
-        <Link>serilog.json</Link>
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
+        <Content Include="..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
+        <Content Include="..\Configuration\apis.json">
+            <Link>Configuration\apis.json</Link>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="..\Configuration\databases.json">
+            <Link>Configuration\databases.json</Link>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="..\Configuration\environment.json">
+            <Link>Configuration\environment.json</Link>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="..\Configuration\environment.Development.json">
+            <Link>Configuration\environment.Development.json</Link>
+            <DependentUpon>environment.json</DependentUpon>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="..\Configuration\serilog.json">
+            <Link>Configuration\serilog.json</Link>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Aero.Application\Aero.Application.csproj" />
-      <ProjectReference Include="..\Aero.Base\Aero.Base.csproj" />
+        <ProjectReference Include="..\Aero.Application\Aero.Application.csproj"/>
+        <ProjectReference Include="..\Aero.Base\Aero.Base.csproj"/>
     </ItemGroup>
 
 </Project>
