--- a/Aero.Application/Aero.Application.csproj
+++ b/Aero.Application/Aero.Application.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MDH.DatabaseAccess\MDH.DatabaseAccess.csproj" />
+      <ProjectReference Include="..\Tennaxia.ApiAccess\Tennaxia.ApiAccess.csproj" />
     </ItemGroup>
 
 </Project>
