--- a/Aero.Worker/Properties/launchSettings.json
+++ b/Aero.Worker/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       },
-      "commandLineArgs": "--application=MDH --worker=TennaxiaDataCollection --module=DealDataFeeder"
+      "commandLineArgs": "--application=MDH --worker=TennaxiaDataCollection --module=DealDataFeeder --campaignId=xxx"
     }
   }
 }
