--- a/Aero.Worker.WebApi/Aero.Worker.WebApi.csproj
+++ b/Aero.Worker.WebApi/Aero.Worker.WebApi.csproj
@@ -19,6 +19,10 @@
         <Content Include="..\.dockerignore">
             <Link>.dockerignore</Link>
         </Content>
+        <Content Include="..\Configuration\apis.json">
+            <Link>Configuration\apis.json</Link>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
         <Content Include="..\Configuration\databases.json">
             <Link>Configuration\databases.json</Link>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
