--- a/Aero.Worker.WebApi/Aero.Worker.WebApi.csproj
+++ b/Aero.Worker.WebApi/Aero.Worker.WebApi.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
         <PackageReference Include="Scalar.AspNetCore" Version="1.2.75" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
