working worker api

--- a/Aero.Worker.WebApi/Aero.Worker.WebApi.csproj
+++ b/Aero.Worker.WebApi/Aero.Worker.WebApi.csproj
@@ -46,6 +46,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Aero.Application\Aero.Application.csproj" />
+      <ProjectReference Include="..\Aero.Worker\Aero.Worker.csproj" />
     </ItemGroup>
 
 </Project>
