--- a/Aero.Worker/Properties/launchSettings.json
+++ b/Aero.Worker/Properties/launchSettings.json
@@ -8,6 +8,14 @@
         "DOTNET_ENVIRONMENT": "Development"
       },
       "commandLineArgs": "--application=MDH --worker=TennaxiaDataCollection --module=DealDataFeeder --CampaignId=xxx"
+    },
+    "EFrontToMDHFeeder_CompanyFeeder": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "environmentVariables": {
+        "DOTNET_ENVIRONMENT": "Development"
+      },
+      "commandLineArgs": "--application=MDH --worker=EFrontToMdh --module=CompanyFeeder"
     }
   }
 }
