--- a/Test/Aero.UnitTests/Aero.UnitTests.csproj
+++ b/Test/Aero.UnitTests/Aero.UnitTests.csproj
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Aero.Application\Aero.Application.csproj" />
+      <ProjectReference Include="..\..\Aero.Application\Aero.Application.csproj" />
     </ItemGroup>
 
 </Project>
